--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ body{
 }
 
 
-.navbar-dark .navbar-nav .nav-link.active,
-.navbar-dark .navbar-nav .nav-link:hover{
+.navbar-dark .navbar-nav .nav-item .nav-link.active,
+.navbar-dark .navbar-nav .nav-item .nav-link:hover{
 	color:#1ebba3;
 }
 
